--- a/javascript-dom/newLearning/learning5/style.css
+++ b/javascript-dom/newLearning/learning5/style.css
@@ -17,14 +17,23 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 25%;
+}
+
+.calculator .header #operator {
+    margin: 0 auto 5px 25px;
+    width: 10%;
+    text-align: center;
+    color: black;
+    font-size: 15px;
 }
 
 .calculator .header #prompt {
     width: 80%;
-    height: 60%;
+    height: 40%;
     color: black;
-    font-size: 50px;
+    font-size: 30px;
     text-align: right;
 }
 
